<resources>
    <string name="app_name">SocialMediaApp</string>
    <string name="welcome">Mühendislerin Buluşma Noktası</string>
    <string name="get_started_btn">Başlat</string>
    <string name="email_et_hint">E-posta</string>
    <string name="password_et_hint">Şifre</string>
    <string name="confirm_password_hint">Şifreyi tekrar girin</string>
    <string name="login_string">Giriş</string>
    <string name="no_account_line">Hesabınız yok mu?</string>
    <string name="move_to_register">Kayıt ol</string>
    <string name="user_name">Kullanıcı Adı</string>
    <string name="user_DOB">Doğum Tarihi</string>
    <string name="radio_male">Erkek</string>
    <string name="radio_female">Kadın</string>
    <string name="text_thoughts">Statüler</string>
    <string name="image_thoughts">Resimler</string>
    <string name="favorite_thoughts">Favoriler</string>
    <string name="user_name_header">KULLANICI ADI</string>
    <string name="user_email_header">kullanıcıMaili@mail.com</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="textstatus_hint">Aklından ne geçiyor?</string>
    <string name="imagestatus_hint">Aklından ne geçiyor?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="comment_hint">Bir yorum yazın</string>
</resources>